fix(grid): Align components to the grid
Fixes components not aligning to the top level grid (where appropriate)

Layout cases still need to be fixed (as part of https://github.com/obartra/reflex/issues/56 and https://github.com/obartra/reflex/issues/40)

Closes https://github.com/obartra/reflex/issues/60

--- a/stories/designGrid.css
+++ b/stories/designGrid.css
@@ -20,6 +20,7 @@
   position: relative;
   margin: 0 auto;
   height: 100%;
+  pointer-events: none;
   max-width: calc(var(--max-width) - var(--page-margin) * 2);
   background-color: transparent;
   background-image: linear-gradient(
